fixes logo spacing

--- a/_sass/components/header.scss
+++ b/_sass/components/header.scss
@@ -9,11 +9,16 @@ header {
   }
 
   .logo {
+    color: $cream;
     font-family: $tangerine;
     font-size: 2.25rem;
+
+    margin: 0;
+    display: inline-block;
   }
 
   .logo-small {
+    color: $white-38;
     font-family: $poppins;
     font-size: 0.75rem;
   }
